# genetic-checkers

./: .clang-tidy  CMakeLists.txt  README.md  run-clang-tidy.py  run_CI.sh
checkers_AI/: CMakeLists.txt
checkers_AI/include/: Heuristics.hpp  IMetricsCalculator.hpp  IStrategy.hpp  MetricsCalculator.hpp  Strategy.hpp
checkers_AI/include/tests/mocks/: Mocks.hpp
checkers_AI/src/: Heuristics.cpp  MetricsCalculator.cpp  Strategy.cpp
checkers_AI/tests/: HeuristicsTests.cpp  MetricsCalculatorTests.cpp  StrategyTests.cpp
checkers_engine/: CMakeLists.txt
checkers_engine/include/: GameController.hpp  GamePlay.hpp  GameState.hpp  PawnState.hpp  Types.hpp
checkers_engine/src/: GameController.cpp  GamePlay.cpp  GameState.cpp
checkers_engine/tests/: GameControllerTests.cpp  GamePlayTests.cpp  GameStateTests.cpp
checkers_frontend/: CMakeLists.txt
checkers_frontend/include/: FrontBoard.hpp  FrontendController.hpp  Helpers.hpp  MainWindow.hpp
checkers_frontend/resources/: resources.qrc
checkers_frontend/src/: FrontBoard.cpp  FrontendController.cpp  Helpers.cpp  MainWindow.cpp  main.cpp
checkers_frontend/uis/: FrontBoard.ui  MainWindow.ui
checkers_learning/: CMakeLists.txt
checkers_learning/include/: GeneticAlgorithm.hpp  Helpers.hpp  IParrarelGameplay.hpp  IRandomEngine.hpp  ParrarelGameplay.hpp  RandomEngine.hpp  Types.hpp
checkers_learning/src/: GeneticAlgorithm.cpp  Helpers.cpp  ParrarelGameplay.cpp  RandomEngine.cpp  main.cpp
checkers_learning/tests/: GeneticAlgorithmTests.cpp
configurations/: 1.txt  info.txt
tests/: CMakeLists.txt
